create image of dots

--- a/templates/parametricLines.html
+++ b/templates/parametricLines.html
@@ -8,10 +8,10 @@
   
   <body>
     <div class="menuContainer">
-      <div class="menu"><a href="../index.html">home</a></div>
-      <div class="menu"><a href="parametricLines.html">parametric</a></div>
-      <div class="menu"><a href="polarCoordinates.html">branches</a></div>
-      <div class="menu"><a href="equalizer.html">contributors</a></div>
+      <div class="menu"><a href="../index.html">Dot image</a></div>
+      <div class="menu"><a href="parametricLines.html">Parametric Lines</a></div>
+      <div class="menu"><a href="polarCoordinates.html">Polar shapes</a></div>
+      <div class="menu"><a href="equalizer.html">Equalizer</a></div>
     </div>
   </body>
 </html>
