multiple paths using beans

--- a/templates/parametricLines.html
+++ b/templates/parametricLines.html
@@ -8,10 +8,12 @@
   
   <body>
     <div class="menuContainer">
-      <div class="menu"><a href="../index.html">Dot image</a></div>
+      <div class="menu"><a href="../index.html">Draw image</a></div>
       <div class="menu"><a href="parametricLines.html">Parametric Lines</a></div>
       <div class="menu"><a href="polarCoordinates.html">Polar shapes</a></div>
       <div class="menu"><a href="equalizer.html">Equalizer</a></div>
+      <div class="menu"><a href="dottedBrowser.html">Dotted browser</a></div>
+      <div class="menu"><a href="paths.html">Paths</a></div>
     </div>
   </body>
 </html>
