--- a/templates/paths.html
+++ b/templates/paths.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <script language="javascript" type="text/javascript" src="../lib/p5.js"></script>
-    <script language="javascript" type="text/javascript" src="../scripts/polarCoordinates.js"></script>
+    <script language="javascript" type="text/javascript" src="../scripts/paths.js"></script>
   </head>
   
   <body>
